testsuite/poke.pkl/int-struct-type-diag-9.pk
/* { dg-do compile } */

deftype Foo =
  struct uint<32> /* { dg-error "total size" } */
  {
    struct int<16>
    {
      struct int<15>
      {
        int<15> c;
      } b;
      uint<1> bit;
    } a;
    int<17> b;
  };
